<resources>
    <string name="app_name">Don\'t crash my drone</string>
    <string name="title_activity_main">Don\'t crash my drone</string>
    <string name="Settings">Settings</string>
    <string name="Weather">Weather</string>
    <string name="title_edittext_title">Maximum wind speed:</string>
    <string name="summary_edittext_preference">10 m/s(without m/s)</string>
    <string name="title_first_section">Drone settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="accept">Ok, you can flight</string>
    <string name="risky">There is some problems, fly if really want this</string>
    <string name="danger">There is a lot of problems! We really not recommend you to fly</string>

    <string name="title_military">Show military restricted areas</string>
    <string name="title_park">Show national park restricted areas</string>
    <string name="title_airports">Show national airports restricted areas</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Drone settings</string>
    <string name="pref_title_display_name">Maximum wind speed(in km/h)</string>
    <string name="pref_default_display_name">10</string>
    <string name="pref_title_display_name_draw">Maximum distance(km)</string>
    <string name="pref_default_display_name_draw">8</string>


</resources>
